cursive-bootstrap/tests/ui/E-SYS/E-SYS-3351.cursive
// RUN: compile-fail
// DIAG: E-SYS-3351
// SPEC: 8.12
// DESC: [[no_mangle]] combined with [[symbol]]

extern "C" {
    [[no_mangle]]
    [[symbol("custom")]]
    public procedure conflicting_attrs() -> i32  //~ ERROR E-SYS-3351: no_mangle with symbol
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
